@@ -67,6 +67,9 @@
 		B256C4BA1ADD5FF10042C760 /* README.md */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = net.daringfireball.markdown; path = README.md; sourceTree = "<group>"; };
 		B27BBD2D1A6575C200C58A41 /* README */ = {isa = PBXFileReference; lastKnownFileType = text; path = README; sourceTree = "<group>"; };
 		B297A7BC213D6AAD0096F0D7 /* test_102_require.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_102_require.py; sourceTree = "<group>"; };
+		B297A7BD213D6C830096F0D7 /* test_103_upgrade.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_103_upgrade.py; sourceTree = "<group>"; };
+		B297A7BE213D7A5B0096F0D7 /* test_200_header_invalid.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_200_header_invalid.py; sourceTree = "<group>"; };
+		B297A7BF213D7AA20096F0D7 /* hecho.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = hecho.py; sourceTree = "<group>"; };
 		B2990D411DA28DD900F2B9BA /* h2_headers.c */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.c; path = h2_headers.c; sourceTree = "<group>"; };
 		B2990D421DA28DD900F2B9BA /* h2_headers.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = h2_headers.h; sourceTree = "<group>"; };
 		B2A6EF2A1A9E3A93005DFC5B /* INSTALL */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = INSTALL; sourceTree = "<group>"; };
@@ -98,7 +101,6 @@
 		B2D2D2ED2136D5CE00D8F6B7 /* 006.js */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.javascript; path = 006.js; sourceTree = "<group>"; };
 		B2D2D2EE2136D5CE00D8F6B7 /* 006.css */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.css; path = 006.css; sourceTree = "<group>"; };
 		B2D2D2EF2136D5CE00D8F6B7 /* header.html */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.html; path = header.html; sourceTree = "<group>"; };
-		B2D2D2F02136D5CE00D8F6B7 /* 005.txt */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = 005.txt; sourceTree = "<group>"; };
 		B2D2D2F12136D5CE00D8F6B7 /* 003.html */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.html; path = 003.html; sourceTree = "<group>"; };
 		B2D2D2F22136D5CE00D8F6B7 /* 001.html */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.html; path = 001.html; sourceTree = "<group>"; };
 		B2D2D2F32136D5CE00D8F6B7 /* apache.org.html */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.html; path = apache.org.html; sourceTree = "<group>"; };
@@ -476,6 +478,8 @@
 				B2D2D2D32136D5CE00D8F6B7 /* test_100_conn_reuse.py */,
 				B2D2D5DF21395D6900D8F6B7 /* test_101_ssl_reneg.py */,
 				B297A7BC213D6AAD0096F0D7 /* test_102_require.py */,
+				B297A7BD213D6C830096F0D7 /* test_103_upgrade.py */,
+				B297A7BE213D7A5B0096F0D7 /* test_200_header_invalid.py */,
 				B2D2D2D52136D5CE00D8F6B7 /* TestEnv.py */,
 			);
 			path = e2e;
@@ -510,7 +514,6 @@
 				B2D2D2E92136D5CE00D8F6B7 /* 009.py */,
 				B2D2D2EA2136D5CE00D8F6B7 /* 007 */,
 				B2D2D2EC2136D5CE00D8F6B7 /* 006 */,
-				B2D2D2F02136D5CE00D8F6B7 /* 005.txt */,
 				B2D2D2F12136D5CE00D8F6B7 /* 003.html */,
 				B2D2D2F22136D5CE00D8F6B7 /* 001.html */,
 				B2D2D2F32136D5CE00D8F6B7 /* apache.org.html */,
@@ -765,10 +768,11 @@
 		B2D2D3C12136D5CE00D8F6B7 /* cgi */ = {
 			isa = PBXGroup;
 			children = (
-				B2D2D3C22136D5CE00D8F6B7 /* hello.py */,
-				B2D2D3C32136D5CE00D8F6B7 /* upload.py */,
-				B2D2D3C42136D5CE00D8F6B7 /* necho.py */,
 				B2D2D3C52136D5CE00D8F6B7 /* files */,
+				B297A7BF213D7AA20096F0D7 /* hecho.py */,
+				B2D2D3C22136D5CE00D8F6B7 /* hello.py */,
+				B2D2D3C42136D5CE00D8F6B7 /* necho.py */,
+				B2D2D3C32136D5CE00D8F6B7 /* upload.py */,
 			);
 			path = cgi;
 			sourceTree = "<group>";
